[gd_scene load_steps=3 format=3 uid="uid://bnf1u6re1r1if"]

[ext_resource type="Script" uid="uid://bdhwvqsmakna2" path="res://Script/BigPanel/PetBagPanel.gd" id="1_m60ti"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n03md"]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 20
shadow_size = 20

[node name="PetBagPanel" type="Panel"]
offset_left = 69.0
offset_top = 56.0
offset_right = 1635.0
offset_bottom = 836.0
scale = Vector2(0.8, 0.8)
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_n03md")
script = ExtResource("1_m60ti")

[node name="TMBackGround" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -90.0
offset_top = -71.0
offset_right = 1672.0
offset_bottom = 831.0
color = Color(1, 1, 1, 0)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
offset_left = 28.0
offset_top = 95.0
offset_right = 3805.0
offset_bottom = 1723.0
scale = Vector2(0.4, 0.4)
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="Bag_Grid" type="GridContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
columns = 8

[node name="Title" type="Label" parent="."]
layout_mode = 2
offset_right = 1566.0
offset_bottom = 69.0
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 0.807843, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 15
theme_override_constants/shadow_outline_size = 15
theme_override_font_sizes/font_size = 50
text = "宠物背包"
horizontal_alignment = 1

[node name="QuitButton" type="Button" parent="."]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
offset_left = 1478.75
offset_top = 20.0
offset_right = 1538.75
offset_bottom = 83.0
theme_override_font_sizes/font_size = 40
text = "X"

[node name="RefreshButton" type="Button" parent="."]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
offset_left = 27.5
offset_top = 16.25
offset_right = 115.5
offset_bottom = 79.25
theme_override_font_sizes/font_size = 40
text = "刷新"
